# CameraConsole

./: CMakeLists.txt  README.md
forms/: mainwindow.ui
include/: audio_pipeline.hpp  audio_recorder.hpp  camera_pipeline.h  capture_thread.hpp  mainwindow.h  playback_thread.hpp  ring_buffer.hpp
include/audio/: audio_device_manager.hpp  audio_pipeline.hpp  audio_player.hpp  audio_recorder.hpp  playback_thread.hpp  ring_buffer.hpp
include/ui/: mainwindow.h  mainwindow_audio.hpp  mainwindow_styles.hpp  mainwindow_video.hpp  qt_utils.hpp
include/ui/pages/: audio_settings_page.hpp  video_settings_page.hpp
include/video/: capture_thread.hpp  video_device_manager.hpp
src/: audio_pipeline.cpp  audio_player.cpp  audio_recorder.cpp  camera_pipeline.cpp  main.cpp  mainwindow.cpp
src/audio/: audio_device_manager.cpp  audio_pipeline.cpp  audio_player.cpp  audio_recorder.cpp
src/ui/: mainwindow.cpp  mainwindow_audio.cpp  mainwindow_render.cpp  mainwindow_stats.cpp  mainwindow_styles.cpp  mainwindow_video.cpp  qcustomplot.cpp  qt_utils.cpp
src/ui/pages/: audio_settings_page.cpp  video_settings_page.cpp
src/video/: camera_pipeline.cpp  video_device_manager.cpp
